# nerdcast-auto-downloader

./: Cargo.toml  README.md  nerdcasts.json
src/: downloaded.rs  main.rs  nerdcasts.rs  structs.rs
