[package]
name = "nerdcast-downloader"
version = "0.1.0"
authors = ["abnerfs <abnerfsgmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking"] }
tokio = "0.2.21"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"